chore: add javafx test tools

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
       <version>3.23.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit</artifactId>
+      <version>4.0.17</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>openjfx-monocle</artifactId>
+      <version>jdk-11+26</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
