chore: add javafx-web and icons feather pack

--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,18 @@
       <version>11.0.2</version>
     </dependency>
     <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>11.0.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.kordamp.ikonli</groupId>
       <artifactId>ikonli-javafx</artifactId>
+      <version>12.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-feather-pack</artifactId>
       <version>12.2.0</version>
     </dependency>
     <dependency>
